--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,17 @@ code {
   font-size: 17px;
 
 }
+
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.tag-card {
+  margin: 10px 0 0 20px;
+  color: #806a78;
+}
